crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@471.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE plt3_adv (a int, b int, c text) PARTITION BY LIST (c);"
---
CreateStmt@0..67
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..21
    Ident@13..21 "plt3_adv"
  Whitespace@21..22 " "
  Ascii40@22..23 "("
  ColumnDef@23..28
    Ident@23..24 "a"
    Whitespace@24..25 " "
    TypeName@25..28
      IntP@25..28 "int"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ColumnDef@30..35
    Ident@30..31 "b"
    Whitespace@31..32 " "
    TypeName@32..35
      IntP@32..35 "int"
  Ascii44@35..36 ","
  Whitespace@36..37 " "
  ColumnDef@37..43
    Ident@37..38 "c"
    Whitespace@38..39 " "
    TypeName@39..43
      TextP@39..43 "text"
  Ascii41@43..44 ")"
  Whitespace@44..45 " "
  PartitionSpec@45..65
    Partition@45..54 "PARTITION"
    Whitespace@54..55 " "
    By@55..57 "BY"
    Whitespace@57..58 " "
    Ident@58..62 "LIST"
    Whitespace@62..63 " "
    Ascii40@63..64 "("
    PartitionElem@64..65
      Ident@64..65 "c"
  Ascii41@65..66 ")"
  Ascii59@66..67 ";"

