crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@473.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE plt3_adv_p2 PARTITION OF plt3_adv FOR VALUES IN ('0007', '0009');"
---
CreateStmt@0..78
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..24
    Ident@13..24 "plt3_adv_p2"
  Whitespace@24..25 " "
  Partition@25..34 "PARTITION"
  Whitespace@34..35 " "
  Of@35..37 "OF"
  Whitespace@37..38 " "
  RangeVar@38..46
    Ident@38..46 "plt3_adv"
  Whitespace@46..47 " "
  For@47..50 "FOR"
  Whitespace@50..51 " "
  Values@51..57 "VALUES"
  Whitespace@57..58 " "
  PartitionBoundSpec@58..76
    InP@58..60 "IN"
    Whitespace@60..61 " "
    Ascii40@61..62 "("
    AConst@62..68
      Sconst@62..68 "'0007'"
    Ascii44@68..69 ","
    Whitespace@69..70 " "
    AConst@70..76
      Sconst@70..76 "'0009'"
  Ascii41@76..77 ")"
  Ascii59@77..78 ";"

